@@ -13,6 +13,7 @@ public interface TransactionRepository extends JpaRepository<TransactionDTO, Int
 
 //    public static List<TransactionDTO> transactionDTOList = new ArrayList<>();
 //
+//
 //    public TransactionDTO save(TransactionDTO transactionDTO) {
 //        transactionDTOList.add(transactionDTO);
 //        return transactionDTO;
@@ -22,11 +23,20 @@ public interface TransactionRepository extends JpaRepository<TransactionDTO, Int
 //        return transactionDTOList;
 //    }
 //
-//    public List<TransactionDTO> getLast10Transactions() {
-//        return findAll().stream()
+//    public List<TransactionDTO> findLast10Transaction() {
+//        //write a stream that sort the transactions based on creation date
+//        //and only return 10 of them
+//        return transactionDTOList.stream()
 //                .sorted(Comparator.comparing(TransactionDTO::getCreateDate).reversed())
 //                .limit(10)
-//                .toList();
+//                .collect(Collectors.toList());
+//    }
+//
+//    public List<TransactionDTO> findTransactionListByAccountId(Long id) {
+//        //if account id is used either as a sender or receiver, return those transactions
+//        return transactionDTOList.stream()
+//                .filter(transactionDTO -> transactionDTO.getSender().equals(id)|| transactionDTO.getReceiver().equals(id))
+//                .collect(Collectors.toList());
 //    }
 
 
